old/app-a/ch05/ingress/external-echoserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echoserver
  namespace: external
  labels:
    run: nginx
spec:
  containers:
  - name: echoserver
    image: k8s.gcr.io/echoserver:1.10
    ports:
    - containerPort: 8080
